--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -19,28 +19,19 @@
     </form>
 
     <ul class="navbar-nav ml-auto">
-
-      <li class="nav-item">
-        <a class="nav-item nav-link text-purple" href="#">
-          <i class="fas fa-envelope"></i>
-          Contato <span class="sr-only">(current)</span>
-        </a>
-      </li>
-
-      <li class="nav-item dropdown">
-        <button class="nav-link text-purple dropdown-toggle btn btn-link" id="navbarDropdown" type="button"
+      <li dropdown class="nav-item dropdown">
+        <button dropdownToggle   class="nav-link text-purple dropdown-toggle btn btn-link" id="navbarDropdown" type="button"
           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" v-pre>
           <i class="fas fa-user-circle"></i>
-          <span>usuario</span>
-          <span class="caret"></span>
+          usuario
         </button>
-        <div class="dropdown-menu dropdown-menu-right animate slideIn" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">
+        <div *dropdownMenu class="dropdown-menu dropdown-menu-right animate slideIn" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" routerLink="/home">
             <i class="fas fa-user-cog"></i>
             Conta
           </a>
           <div class="d-none d-sm-block dropdown-divider"></div>
-          <a class="dropdown-item" href="#">
+          <a class="dropdown-item" routerLink="/">
             <i class="fas fa-sign-out-alt"></i>
             sair
           </a>
